[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "stateflow"
version = "0.0.2"
description = "A state-propagation framework."
readme = "README.md"
authors = [
    { name = "Tomasz Åakota", email = "tomasz@lakota.pl" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
urls = { Homepage = "https://github.com/peper0/stateflow" }
dependencies = ["pydot>=4.0.1", "typing-extensions>=4.14.0"]

[tool.pdm]
# PDM-specific settings can be added here if needed

[tool.pdm.dev-dependencies]
test = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "numpy"]

[tool.pdm.scripts]
test = "pytest stateflow/test/"
test_cov = "pytest --cov=stateflow stateflow/test/"
test_verbose = "pytest -v stateflow/test/"

[tool.pdm.build]
includes = ["stateflow"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)12s %(message)s"
log_cli_date_format = "%SS.%f"